Modify dialog component to keep it at the initial top position and prevent the jumps from one position to another when the content changes

--- a/styles/components/box/dialog.less
+++ b/styles/components/box/dialog.less
@@ -7,6 +7,7 @@
     bottom: 0;
     z-index: 1;
     display: flex;
+    overflow: auto;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
